HTML for home, student, teacher

--- a/CSE106/Lab_08/HTML/index.html
+++ b/CSE106/Lab_08/HTML/index.html
@@ -2,20 +2,46 @@
 
 
 <html>
-   
-
-<head>
-    <link rel="stylesheet" type="text/css" href="HTML/styles.css">
-
-
-    <title class="homeHeader">My Basic HTML Page</title>
-</head>
-
-<body>
-
-    <h1>Hello, World!</h1>
-    <p>This is a basic HTML page.</p>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styling.css">
+        <title>Lab 8</title>
+    </head>
 
 
+
+
+<body class="backgroundPink">
+    <h1 class="centerText">
+        University of Walmart Arkansas
+    </h1>
+
+    <div class="box">
+        <form>
+            <!-- Username text box input-->
+            <label  for="text-input">Username:</label>
+            <input type="text" id="usernameInput" name="text-input">
+            
+             <!-- Password text box input-->
+            <label  for="text-input">Password:</label>
+            <input type="text" id="usernameInput" name="text-input">
+
+            <!-- submit button-->
+            <input class="button" type="submit" id ="submitButton" value="Submit">
+        </form>
+    </div>
+
+    
 </body>
+
+
+
+
+
+
+
+
 </html>
+
+
+
+
